--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,7 +101,7 @@ header {
 
 .container {
     width: 1320px;
-    margin: 30px auto;
+    margin: 50px auto;
     padding: 0 30px;
 }
 
@@ -231,17 +231,115 @@ button {
     letter-spacing: 0%;
 }
 
-#description{
+#description {
     padding: 60px 140px;
 }
 
-.skills-container{
+.skills-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.skill{
+.skill {
     padding: 10px;
     border-radius: 16px;
+}
+
+.subscribe {
+    width: 1320px;
+    height: 616px;
+    margin: 80px 140px;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+
+}
+
+.newsletter {
+    padding: 120px;
+    text-align: center;
+    justify-content: center;
+}
+
+.newsletter h1 {
+    color: rgb(7, 2, 17);
+    font-family: Merriweather;
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 60px;
+    letter-spacing: 0%;
+    text-transform: capitalize;
+}
+
+.newsletter p {
+    color: rgba(7, 2, 17, 0.6);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.input-feild {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 0;
+}
+
+.input-btn {
+    padding: 10px 20px;
+}
+
+.sub-button {
+    padding: 7px;
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: 0%;
+    border-radius: 0px 50px 50px 0px;
+    background: rgb(255, 0, 0);
+    text-transform: capitalize;
+}
+
+footer {
+    display: flex;
+    gap: 120px;
+    background: rgb(7, 2, 17);
+    padding: 120px 140px;
+    margin-top: 80px;
+    color: rgb(255, 255, 255);
+}
+
+.footer-item {
+    width: 50%
+}
+
+.social-links {
+    padding: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 250px;
+}
+
+.social-links a {
+    margin-left: 24px;
+}
+
+.section-title {
+    display: flex;
+}
+
+.section-title-text {
+    display: flex;
+}
+
+#description {
+    margin-top: 130px;
+
 }
